tests/snapshots/helper_attributes-6.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
comma_values=single&
pipe_values=42&
space_values=one&
dot_values=255&
normal_vec%5B0%5D=alone
