tests/snapshots/helper_attributes.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
comma_values=apple,banana,cherry&
pipe_values=1|2|3|4|5&
space_values=hello+world&
dot_values=10.20.30&
normal_vec[0]=normal&
normal_vec[1]=array
