tests/snapshots/helper_attributes@form-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
comma_values=&
pipe_values=&
space_values=&
dot_values=&
normal_vec=
