tests/snapshots/helper_attributes@query-3.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
comma_values=single&
pipe_values=42&
space_values=one&
dot_values=255&
normal_vec[0]=alone
